Edited wiki page through web user interface.

--- a/wiki/HowToVideos.wiki
+++ b/wiki/HowToVideos.wiki
@@ -1,13 +1,17 @@
-#summary One-sentence summary of this page.
+#summary VIENNA Add-In HOW-TO videos
 
-= Introduction =
+= Video 1 =
 
-Add your content here.
+This videos shows how to create an initial UPCC model structure.
 
+= Video 2 =
 
-= Details =
+This video shows how to use the UML Profile for Core Components (UPCC) toolbox in order to create UPCC artifacts
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+= Video 3 =
+
+This video shows how to automatically generate ABIEs from CCs and BDTs from CDTs.
+
+= Video 4 =
+
+This video shows how to generate XML schema files from core component models
