Edited wiki page through web user interface.

--- a/wiki/HowToVideos.wiki
+++ b/wiki/HowToVideos.wiki
@@ -2,6 +2,8 @@
 
 = Video 1 =
 
+[http://umm-dev.org/wp-content/videos/tool-demo-1.htm Video 1]
+
 This videos shows how to create an initial UPCC model structure.
 
 = Video 2 =
