--- a/wiki/HowToVideos.wiki
+++ b/wiki/HowToVideos.wiki
@@ -8,12 +8,18 @@ This videos shows how to create an initial UPCC model structure.
 
 = Video 2 =
 
+[http://umm-dev.org/wp-content/videos/tool-demo-2.htm Video 2]
+
 This video shows how to use the UML Profile for Core Components (UPCC) toolbox in order to create UPCC artifacts
 
 = Video 3 =
 
+[http://umm-dev.org/wp-content/videos/tool-demo-3.htm Video 3]
+
 This video shows how to automatically generate ABIEs from CCs and BDTs from CDTs.
 
 = Video 4 =
+
+[http://umm-dev.org/wp-content/videos/tool-demo-4.htm Video 4]
 
 This video shows how to generate XML schema files from core component models
