Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -12,6 +12,7 @@
  * [CreateInstallerFileForDistribution Create installer]   
  * [QuickLinker EA quicklinker feature]
  * [Meetings Meeting Notes]
+ * [ReSharperSettings]
 
 * [Presentation VIENNA AddIn Presentation]
 
