--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -4,7 +4,8 @@
 
  # Windows 2000/XP/Vista
  # .NET Framework 3.5 ([http://www.microsoft.com/downloads/details.aspx?FamilyId=333325FD-AE52-4E35-B531-508D977D32A6&displaylang=en Download from Microsoft.com])
- # Enterprise Architect 7.1 or higher (a 30 day trial version can be downloaded from [http://www.sparxsystems.com.au Sparx Systems's website]
+ # Enterprise Architect 7.1 or higher (a 30 day trial version can be downloaded from [http://www.sparxsystems.com.au Sparx Systems's website])
+   # Note for developers: For running the unit tests, you need version 7.5 (there have been some minor API changes).
 
 
 = How to install the Add-In using the Installation Package =
