Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,6 +2,7 @@
 
 * [ForUsers User infos]
  * [InstallationNotes Installation Notes]
+ * [GettingStarted Getting Started]
  * [Troubleshooting Troubleshooting]
  * [Release_Notes Release Notes]
  * [EnterpriseArchitect The Enterprise Architect]  
