--- a/wiki/RoadMap.wiki
+++ b/wiki/RoadMap.wiki
@@ -4,5 +4,4 @@
 
 == Release 0.0.6 ==
 
-[issues]
-[http://code.google.com/p/vienna-add-in/issues/list?q=release%3A0.0.6]
+[http://code.google.com/p/vienna-add-in/issues/list?q=release%3A0.0.6 Issues]
