--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -13,7 +13,7 @@
  # Go to [http://code.google.com/p/vienna-add-in/downloads/list Downloads] and download the latest version of the VIENNA Add-In Installer.
  # Follow the instructions given by the Installer
  # *Important!* When installing the VIENNA Add-In select install "just for me" and not "for everyone". If you choose "for everyone" the menu entry of the VIENNA Add-In will not appear in the menu bar of Enterprise Architect. Please see the [http://code.google.com/p/vienna-add-in/wiki/Troubleshooting troubleshooting wiki entry] for a solution to this problem.
- # Profile for UPCC 3.0: Load the most recent UPCC 3.0 profile on every EA startup Using this option Enterprise Architect checks a URL, where the most recent UPCC 3.0 technology is stored, on every startup for a newer definition of the current UPCC 3.0 technology. In order to enable this option you have to be connected to the Internet when your first use the new UPCC 3.0 technology. On every succeeding start-up EA will check online, whether a newer version of the technology exists. If a newer version exists the new technology is automatically loaded. If your are not connected to the Internet after you have successfully loaded the UPCC 3.0 technology for the first time, EA will use the latest locally cached version of the UPCC 3.0 technology. In order to enable this option select the menu item “Settings” and “MDG Technologies” in Enterprise Architect. In the opening dialog as shown in figure 2 select “Advanced”, “Add” and “Add URL”. Enter the following URL: http://www.umm-dev.org/ea/upcc3.xml
+ # Load the most recent UPCC 3.0 profile on every EA startup: Select the menu item “Settings” and “MDG Technologies” in Enterprise Architect. In the opening dialog as shown in figure 2 select “Advanced”, “Add” and “Add URL”. Enter the following URL: http://www.umm-dev.org/ea/upcc3.xml
 = Checkout from SVN = 
 
 If you want to checkout the latest source from SVN in order to participate in development please refer to [http://code.google.com/p/vienna-add-in/wiki/CheckoutfromSVN the the checkout section]
