--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,6 +3,7 @@
 * [ForUsers User infos]
  * [InstallationNotes Installation Notes]
  * [GettingStarted Getting Started]
+  * [fasf]
  * [Troubleshooting Troubleshooting]
  * [Release_Notes Release Notes]
  * [EnterpriseArchitect The Enterprise Architect]  
