--- a/wiki/HowToCreateaUPCC3Model.wiki
+++ b/wiki/HowToCreateaUPCC3Model.wiki
@@ -23,9 +23,10 @@ This tutorial explaines how to create a new model according to the UPCC3 standar
   # Usually, default names are assigned to the libraries generated as members of the new model. If you want to assign custom names to some of the libraries, uncheck the _Use default names for generated Libraries_ checkbox and change the library names:
     TODO img 6
   # After unchecking _Use default names for generated Libraries_, you can also uncheck all libraries you do not want to be generated automatically
-  # When selecting _Import standard CC libraries_ checkbox, the Add-In will automatically download the standard Core Component Libraries an import them into the newly created model.
-    # 1
-    # 2
+  # When selecting the _Import standard CC libraries_ checkbox, the Add-In will automatically download the standard Core Component Libraries an import them into the newly created model. If you decide not to use this functionality at the moment, you can import the CC Libraries later using the Standard CC Library Importer - see section _Import standard Core Component Libraries_ for details!
+   # When using the automatic CCL import functionality, you can choose the desired version of the CCL from two drop-down lists
+   # After choosing the CCL version, detailed information to the selected version is shown in the _Comments_ section
+     TODO img 7
   # finish
 
 <wiki:comment>Finally, click "Generate Default Model" to create the model structure. The process of generating the model structure will take some time, you can observe this process by watching the status messages that are printed to the "status" field regularly. When finished, a message box confirms that the model has been created successfully.</wiki:comment>
