Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,6 +8,7 @@
  * [EnterpriseArchitect The Enterprise Architect]  
  * [HowToVideos HOW-TO videos]  
  * [HowToCreateaUPCC3Model How To create a UPCC3 Model]
+ * [ReferenceDefaultUPCCModelCreator Reference: Default UPCC ModelCreator]
 
 * [ForDevelopers Developer infos]
  * [CheckoutfromSVN Check out from SVN]
