--- a/wiki/ReferenceStandardCCLImporter.wiki
+++ b/wiki/ReferenceStandardCCLImporter.wiki
@@ -6,8 +6,12 @@ The _Standard Core Component Library Importer_ dialog downloads the standard CC 
 
 http://vienna-add-in.googlecode.com/svn/wiki/images/ReferenceStandardCCLImporter_01.gif
 
-  # Choose the desired version of the CCL to be imported from these two drop-down lists.
-  # After choosing a CCL version from the drop-down lists (1), a detailed description of the selected version is shown in ths section.
-  # During the import process, status messages are shown in this section regularly.
-  # Click this button to start the import process.
-  # Click this button to close the dialog without importing any libraries.
+(1) Choose the desired version of the CCL to be imported from these two drop-down lists.
+
+(2) After choosing a CCL version from the drop-down lists (1), a detailed description of the selected version is shown in ths section.
+
+(3) During the import process, status messages are shown in this section regularly.
+
+(4) Click this button to start the import process.
+
+(5) Click this button to close the dialog without importing any libraries.
