Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,7 +5,8 @@
  * [GettingStarted Getting Started]
  * [Troubleshooting Troubleshooting]
  * [Release_Notes Release Notes]
- * [EnterpriseArchitect The Enterprise Architect]  
+ * [EnterpriseArchitect The Enterprise Architect]
+ * [HowToTemplate How to Template]  
  * [HowToVideos HOW-TO videos]  
  * [HowToCreateaUPCC3Model How To create a UPCC3 Model]
  * [ReferenceDefaultUPCCModelCreator Reference: Default UPCC Model Creator]
