--- a/wiki/HowToTemplate.wiki
+++ b/wiki/HowToTemplate.wiki
@@ -4,10 +4,22 @@
 
 Add theoretical background here. Give references to external documents if available. E.g., UPCC standard or some paper.
 
+No screenshots if possible. 
 
-= Details =
+Example: Explain the gerneral purpose of the UPCC model creator.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Omit "How to" at the beginning of such an entry. Every entry in the "Getting Started" section is supposed to be a How To entry.
+
+
+= Instructions on this Entry =
+Example title: "Creating your first UPCC model"
+
+Add a detailed and complete list of working steps to fully utilize the functionality.
+
+Example: Give a numbered enumeration of steps accompanied by suitable screenshots.
+
+= References =
+[1] CCTS standard ...
+
+= Related Tasks =
+E.g., link to UPCC Standard Core Component Library Importer
